css/main.css
/* ... */
@media only screen and (max-width: 700px) {
  .features {
    max-width: 500px;
    text-align: center;
  }

  .features .item-feature {
    width: 100%;
    clear: both;
  }
}

@media only screen and (max-width: 600px) {
  .s-features {
    padding-top: 14.8rem;
    padding-bottom: 14.8rem;
  }

  .features .item-feature:nth-child(n) {
    padding-right: 10px;
    padding-left: 10px;
  }
}

@media only screen and (max-width: 400px) {
  .s-features {
    padding-top: 14rem;
    padding-bottom: 14rem;
  }

  .features .item-feature:nth-child(n) {
    padding-right: 0;
    padding-left: 0;
    margin-bottom: 0;
  }
}

/* ===================================================================
 * # testimonials
 *
 * ------------------------------------------------------------------- */
.testimonials-wrap {
  margin-top: 9.6rem;
}

.testimonials-header {
  text-align: center;
  padding-top: 6.4rem;
  position: relative;
}

.testimonials-header::before {
  content: "";
  display: inline-block;
  height: 1px;
  width: 60%;
  background-color: var(--color-d6d6d6);
  position: absolute;
  top: 0;
  left: 50%;
  -webkit-transform: translate3d(-50%, 0, 0);
  -ms-transform: translate3d(-50%, 0, 0);
  transform: translate3d(-50%, 0, 0);
}

.testimonials {
  font-family: "Nunito Sans", sans-serif;
  font-weight: normal;
  font-size: 1.7rem;
  line-height: 1.882;
  margin-top: 4rem;
  padding-bottom: 7.2rem;
  position: relative;
}

.testimonials__slide {
  position: relative;
  padding-left: 9.6rem;
  padding-right: 3rem;
}

.testimonials__author {
  display: inline-block;
  position: relative;
  margin-bottom: 1.6rem;
  line-height: 2.4rem;
}

.testimonials__name,
.testimonials__link {
  display: inline-block;
}

.testimonials__name {
  font-weight: 700;
  color: var(--color-black);
  margin-right: 4px;
}

.testimonials__link {
  font-size: 1.6rem;
  color: var(--color-rgb-black_4);
}

/* -------------------------------------------------------------------
 * responsive:
 * testimonials
 * ------------------------------------------------------------------- */
@media only screen and (max-width: 1000px) {
  .testimonials {
    max-width: 700px;
    text-align: center;
  }

  .testimonials__slide {
    padding-left: 3rem;
  }
}

@media only screen and (max-width: 700px) {
  .testimonials {
    max-width: 500px;
  }
}

@media only screen and (max-width: 400px) {
  .testimonials {
    margin-top: 3.2rem;
  }

  .testimonials-header {
    padding-top: 6.4rem !important;
  }

  .testimonials__slide {
    padding-right: 0;
    padding-left: 0;
  }
}

/* ===================================================================
 * # pricing
 *
 * ------------------------------------------------------------------- */
.s-pricing {
  padding-top: 14rem;
  padding-bottom: 14rem;
  background-color: var(--color-white);
  position: relative;
}

@media only screen and (max-width: 600px) {
  .s-pricing {
    padding-top: 12rem;
    padding-bottom: 12rem;
  }
}

/* ===================================================================
 * # download
 *
 * ------------------------------------------------------------------- */

/* -------------------------------------------------------------------
 * responsive:
 * download
 * ------------------------------------------------------------------- */

/* ===================================================================
 * # footer
 *
 * ------------------------------------------------------------------- */
.s-footer {
  padding: 4.8rem 0;
  margin-top: 9.6rem;
  color: var(--color-rgb-white-0_4);
  background-color: var(--color-0e1113);
  position: relative;
}

.s-footer a {
  color: var(--color-white);
}

.s-footer a:hover,
.s-footer a:focus,
.s-footer a:active {
  color: var(--color-2);
}

.s-footer .display-1 {
  color: var(--color-2);
}

.s-footer h2 {
  margin-top: 0;
  margin-bottom: 1.6rem;
  color: var(--color-white);
}

.s-footer p.lead {
  color: var(--color-rgb-white-0_3);
}

.footer__bottom {
  margin-top: 1.6rem;
  padding-top: 3.9rem;
  border-top: 1px solid var(--color-rgb-white-0_03);
}

/* -------------------------------------------------------------------
 * ## subscribe form
 * ------------------------------------------------------------------- */

/* -------------------------------------------------------------------
 * ## footer social
 * ------------------------------------------------------------------- */

/* -------------------------------------------------------------------
 * ## footer site links
 * ------------------------------------------------------------------- */

/* -------------------------------------------------------------------
 * ## copyright
 * ------------------------------------------------------------------- */
.ss-copyright {
  margin-top: 4.8rem;
  text-align: center;
}

.ss-copyright span {
  font-size: 17px;
  line-height: 3.2rem;
  display: inline-block;
}

.ss-copyright span::after {
  content: "·";
  display: inline-block;
  padding: 0 1rem 0 1.2rem;
  color: white;
}

.ss-copyright span:last-child::after {
  display: none;
}

/* -------------------------------------------------------------------
 * ## go to top
 * ------------------------------------------------------------------- */
.go-top {
  z-index: 600;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: all 0.8s ease-in-out;
  transition: all 0.8s ease-in-out;
  -webkit-transform: translate3d(0, 200%, 0);
  -ms-transform: translate3d(0, 200%, 0);
  transform: translate3d(0, 200%, 0);
  position: fixed;
  bottom: 32px;
  right: 40px;
}
/* ... */

